--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "cabal-ses-bot": "index.js"
+  },
   "scripts": {
     "start": "node -r esm index"
   },
@@ -13,6 +16,8 @@
     "cabal-node": "^2.2.0",
     "debug": "^3.1.0",
     "esm": "^3.0.74",
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "random-access-memory": "^3.0.0",
     "ses": "^0.1.2"
   }
