--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "esm": "^3.0.74",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
+    "p-queue": "^2.4.2",
     "random-access-memory": "^3.0.0",
     "ses": "^0.1.2"
   }
