Make message loading work better, implement help command.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cabal-node": "^2.2.0",
     "chalk": "^2.4.1",
     "debug": "^3.1.0",
+    "dedent": "^0.7.0",
     "esm": "^3.0.74",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
