Add ability to start bots from a dat

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "p-queue": "^2.4.2",
+    "parse-dat-url": "^3.0.1",
     "random-access-memory": "^3.0.0",
+    "rimraf": "^2.6.2",
     "ses": "^0.1.2"
   }
 }
